--- a/.env.local
+++ b/.env.local
@@ -1,2 +1,4 @@
 discord_bot_token=MTIwODM4MDQwOTgxNDE4ODA0Mg.GufPW0.G5hGQ93fQrlbTodsc7iL_9RKow7l8u2gEXazKQ
 open_api_token=AIzaSyAvrxOyAVzPVcnzxuD0mjKVDyS2bNWfC10
+PORT=5000
+MONGO_URI=mongodb://localhost:27017/web4ai_db
