--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,5 @@
 host=db.sxenpzuwwxtapvpskwtb.supabase.co
-port=5432
 database=postgres
 user=postgres
+PORT=5000
+MONGO_URI=mongodb://localhost:27017/web4ai_db
