--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,21 @@
 version: '3'
 services:
+  backend:
+    build: ./backend
+    ports:
+      - "5000:5000"
+    env_file: .env
+
   frontend:
     build: ./frontend
     ports:
       - "3000:3000"
 
-  backend:
-    build: ./backend
+  mongo:
+    image: mongo:latest
     ports:
-      - "5000:5000"
-    env_file:
-      - .env
+      - "27017:27017"
+
 
   db:
     image: postgres:latest
