--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ discord_bot_token=MTIwODM4MDQwOTgxNDE4ODA0Mg.GufPW0.G5hGQ93fQrlbTodsc7iL_9RKow7l
 open_api_token=AIzaSyAvrxOyAVzPVcnzxuD0mjKVDyS2bNWfC10
 PORT=5000
 MONGO_URI=mongodb://localhost:27017/web4ai_db
+REACT_APP_API_URL=http://localhost:5000
