--- a/Docker/docker-compose.yml
+++ b/Docker/docker-compose.yml
@@ -15,7 +15,7 @@ services:
     ports:
       - "3000:3000"
     environment:
-      - REACT_APP_API_URL=http://backend:5000
+      - REACT_APP_API_URL=https://web4application.github.io/Web4AI_Project_Assistant:5000
     volumes:
       - ./frontend:/app
     depends_on:
