--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ Flask-Cors==3.1.1
 Flask-SQLAlchemy==3.0.0
 Flask-RESTful==0.3.9
 Flask-Migrate==3.1.0
+Flask-WTF==1.0.1
 gunicorn==20.1.0
 requests==2.28.1
 numpy==1.24.0
@@ -11,5 +12,14 @@ scikit-learn==1.2.0
 tensorflow==2.11.0
 torch==1.13.1
 transformers==4.25.1
-sqlalchemy==2.0.0
-psycopg2==2.9.5  # If using PostgreSQL
+spacy==3.5.0
+nltk==3.7
+python-dotenv==0.21.1
+celery==5.2.6
+redis==4.4.0
+Flask-Login==0.6.2
+Flask-Mail==0.9.1
+Flask-Admin==1.5.8
+flask-caching==1.10.1
+Flask-Session==0.4.0
+flask-socketio==5.3.0
