--- a/requirements.txt
+++ b/requirements.txt
@@ -44,6 +44,7 @@ mypy==1.4.1; python_version < '3.8'
 webdriver-manager==4.0.1
 
 # AI and ML Libraries
+openai==0.27.2
 keras==2.12.0
 imgaug==0.4.0
 nlpaug==1.1.3
@@ -57,7 +58,9 @@ librosa==0.9.2
 scipy==1.10.1
 aiohttp==3.8.4
 google-cloud-speech==2.22.2
+langchain==0.0.128
 
 # FastAPI and ASGI Server
 fastapi==0.95.0
 uvicorn==0.22.0
+RODAAI
