--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,7 +1,10 @@
-FROM node:18-alpine
+FROM python:3.11-slim
 
 WORKDIR /app
-COPY backend/package.json .
-RUN npm install
-COPY backend/ .
-CMD ["node", "src/app.js"]
+
+COPY requirements.txt .
+RUN pip install -r requirements.txt
+
+COPY . .
+
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
