--- a/Docker/docker-compose.yml
+++ b/Docker/docker-compose.yml
@@ -1,22 +1,42 @@
-version: '3'
+# Creating deployment scripts for Render and Railway for a FastAPI backend
 
+# render.yaml content
+render_yaml = """
 services:
-  backend:
-    build: ./backend
-    ports:
-      - "5000:5000"
-    environment:
-      - OPENAI_API_KEY=${OPENAI_API_KEY}
-    volumes:
-      - ./backend:/app
+  - type: web
+    name: web4api
+    env: python
+    plan: free
+    buildCommand: "pip install -r requirements.txt"
+    startCommand: "uvicorn app:app --host 0.0.0.0 --port 8080"
+    envVars:
+      - key: ALLOW_ORIGIN
+        value: https://web4api.onrender.com
+      - key: SENTRY_DSN
+        value: https://55038c1e414932ec8d81c34e5ef120fa@o4509364065402880.ingest.de.sentry.io/4509364112457808
+"""
 
-  frontend:
-    build: ./frontend
-    ports:
-      - "3000:3000"
-    environment:
-      - REACT_APP_API_URL=https://web4application.github.io/Web4AI_Project_Assistant:5000
-    volumes:
-      - ./frontend:/app
-    depends_on:
-      - backend
+# railway.json content
+railway_json = """
+{
+  "build": {
+    "builder": "NIXPACKS"
+  },
+  "deploy": {
+    "startCommand": "uvicorn app:app --host 0.0.0.0 --port $PORT"
+  },
+  "env": {
+    "ALLOW_ORIGIN": "https://web4api.onrender.com",
+    "SENTRY_DSN": "https://55038c1e414932ec8d81c34e5ef120fa@o4509364065402880.ingest.de.sentry.io/4509364112457808"
+  }
+}
+"""
+
+# Save to files
+with open("/mnt/data/render.yaml", "w") as f:
+    f.write(render_yaml)
+
+with open("/mnt/data/railway.json", "w") as f:
+    f.write(railway_json)
+
+"/mnt/data/render.yaml and /mnt/data/railway.json created"
