--- a/.env
+++ b/.env
@@ -6,3 +6,6 @@ OPENAPI_key=AIzaSyC0ubxbCPSEJxsQAM8gOAZchaxquhRtI
 OPENAI_API_KEY=AIzaSyAvrxOyAVzPVcnzxuD0mjKVDyS2bNWfC10
 GOOGLE_API_KEY=AlzaSyCHjfdo3w160Dd5yTVJD409pWmigOJEg
 SENTRY_DSN=https://55038c1e414932ec8d81c34e5ef120fa@o4509364065402880.ingest.de.sentry.io/4509364112457808
+OPENAI_API_KEY=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
+GITHUB_TOKEN=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
+GITHUB_REPO=Web4application/Web4AI
