--- a/.github/workflows/web4ai.yml
+++ b/.github/workflows/web4ai.yml
@@ -22,15 +22,14 @@ jobs:
     - name: 📦 Install dependencies
       run: npm install
 
-      - name: 📦 Install dependencies
-  run: |
-    if [ -f package-lock.json ]; then
-      npm ci
-    else
-      echo "⚠️ package-lock.json not found, falling back to npm install"
-      npm install
-    fi
-
+    - name: 📦 Install dependencies
+      run: |
+       if [ -f package-lock.json ]; then
+       npm ci
+       else
+       echo "⚠️ package-lock.json not found, falling back to npm install"
+       npm install
+       fi
 
     - name: 🔧 Run AI Enhancer
       run: node backend/runAITasks.js
@@ -42,3 +41,12 @@ jobs:
         git add .
         git commit -m "🔁 AI-enhanced: automated refactor & docs"
         git push
+
+        - name: ⏱️ Cache node modules
+          uses: actions/cache@v3
+          with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+          ${{ runner.os }}-node-
+
