--- a/web4ai-composite-enhancer/action.yml
+++ b/web4ai-composite-enhancer/action.yml
@@ -23,6 +23,11 @@ runs:
           echo "⚠️ package-lock.json missing — running npm install"
           npm install
         fi
+
+   - name: Generate changelog summary
+     run: node changelog.js
+     id: changelog
+
       shell: bash
 
     - name: Run Web4AI Enhancer
