--- a/.github/workflows/web4ai.yml
+++ b/.github/workflows/web4ai.yml
@@ -20,6 +20,9 @@ jobs:
         node-version: '18'
 
     - name: 📦 Install dependencies
+      run: npm install
+
+    - name: 📦 Install dependencies
       run: |
        if [ -f package-lock.json ]; then
        npm ci
@@ -38,11 +41,12 @@ jobs:
         git add .
         git commit -m "🔁 AI-enhanced: automated refactor & docs"
         git push
-        
-     - name: ⏱️ Cache node modules
-       uses: actions/cache@v3
-       with:
-       path: ~/.npm
-       key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-       restore-keys: |
-         ${{ runner.os }}-node-
+
+        - name: ⏱️ Cache node modules
+          uses: actions/cache@v3
+          with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+          ${{ runner.os }}-node-
+
