--- a/Package.json
+++ b/Package.json
@@ -1,28 +1,25 @@
 {
-  "name": "web4ai",
+  "name": "gpt-5-mini",
   "version": "1.0.0",
-  "description": "AI-powered assistant for developers to help with code refactoring and file management.",
-  "main": "src/index.js",
+  "type": "module",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "start": "node server.js",
+    "test": "node test.js"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.0", 
-    "react-scripts": "^5.0.0"
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "node-fetch": "^3.3.2",
+    "openai": "^4.0.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "nock": "^13.3.1",
+    "vite": "^5.0.0"
+  },
   "engines": {
-    "node": ">=14.0.0",
-    "npm": ">=6.0.0"
-  },
-  "author": "seeiki yakub",
-  "license": "MIT",
-  "homepage": "https://web4application.github.io/Web4AI"
+    "node": ">=18.0.0"
+  }
 }
-"predeploy": "npm run build",
-"deploy": "gh-pages -d build"
