--- a/render.yaml
+++ b/render.yaml
@@ -1,13 +1,12 @@
-
 services:
   - type: web
     name: web4api
     env: python
     plan: free
-    buildCommand: "pip install -r requirements.txt"
-    startCommand: "uvicorn app:app --host 0.0.0.0 --port 10000"
+    buildCommand: "pip install -r requirements.txt" or "npm install @vercel/node"
+    startCommand: "uvicorn app:app --host 0.0.0.0 --port 8080"
     envVars:
       - key: ALLOW_ORIGIN
-        value: https://web4application.github.io
+        value: https://ghe.com
       - key: SENTRY_DSN
         value: <your-sentry-dsn>
